kubernetes/ingress/echo-app.yml
---
kind: Pod
apiVersion: v1
metadata:
  name: http-echo
  labels:
    app: echo
spec:
  containers:
    - name: http-echo
      image: hashicorp/http-echo
      args:
        - "-text=Welcome to the Kubernetes, your  installation is working."

---
kind: Service
apiVersion: v1
metadata:
  name: echo-service
spec:
  selector:
    app: echo
  ports:
    - port: 5678 # Default port for image
