kubernetes/ingress/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: istio-system
  labels:
    app: grafana
    operator.istio.io/component: AddonComponents
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.5.3
    release: istio
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"grafana","operator.istio.io/component":"AddonComponents","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.5.3","release":"istio"},"name":"grafana","namespace":"istio-system"},"spec":{"ports":[{"name":"http","port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app":"grafana"},"type":"ClusterIP"}}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
