kubernetes/ingress/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: istio-system
  labels:
    app: prometheus
    operator.istio.io/component: AddonComponents
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.5.3
    release: istio
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"prometheus.io/scrape":"true"},"labels":{"app":"prometheus","operator.istio.io/component":"AddonComponents","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.5.3","release":"istio"},"name":"prometheus","namespace":"istio-system"},"spec":{"ports":[{"name":"http-prometheus","port":9090,"protocol":"TCP"}],"selector":{"app":"prometheus"}}}
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: http-prometheus
      protocol: TCP
      port: 80
      targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
