kubernetes/ingress/adc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        #annotations:
          #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
          #    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
          #    nginx.ingress.kubernetes.io/rewrite-target: /
  name: hcl-adc-jenkins
spec:
  rules:      
    - host: adc.hdap.demos.hclets.com
      http:
        paths:
        -  path: /
           backend:
             serviceName: adc-service
             servicePort: 80
