kubernetes/ingress/echo-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: echo-ingress
  namespace: default
spec:
  rules:
    -
      http:
        paths:
          -
            backend:
              serviceName: echo-service
              servicePort: 5678
            path: /echo
