kubernetes/ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:        
  name: grafana-ingress
spec:
  rules:      
    - host: grafana.hdap.demos.hclets.com
      http:
        paths:
        -  path: /
           backend:
             serviceName: grafana
             servicePort: 80
