kubernetes/ingress/nexus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        #annotations:
          #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
          #    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
          #    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nexus-ingress
spec:
  rules:      
    - host: nexus.hdap.demos.hclets.com
      http:
        paths:
        -  path: /
           backend:
             serviceName: nexus
             servicePort: 80
